page style changes and about page added

--- a/src/index.css
+++ b/src/index.css
@@ -120,3 +120,21 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
+}
+
+html.dark {
+  background-color: #2f2f2f;
+}
+
+html.light {
+  background-color: #fff;
+}
